# Affective-Memory-Networks

./: .gitignore  README.md  pyproject.toml  reproduce_paper.sh  requirements.txt  run_experiments.py
amn_data_package/: README.md  experiment_conversations.json
amn_data_package/conversations/: empathetic_dialogues_100.json
amn_data_package/lexicons/: warriner_vad_2000.csv
amn_data_package/scripts/: load_data.py  verify_package.py
amn_data_package/test_cases/: TEST_CASES.md
config/: defaults.yaml
experiments/: ablation_study.py  analyze_ablation.py  analyze_baselines.py  compute_all_metrics.py  deploy_human_eval.py  eval_metrics.py  exp1_full.py  exp1_generator.py  final_stats.py  fix_memory_counting.py  generate_all_figures.py  generate_architecture_diagram.py  generate_paper_figures.py  generate_publication_figures.py  human_eval.py  human_eval_analysis.py  human_eval_template.md  metrics.py  per_emotion_analysis.py  prelim_metrics.py  protocol.md  run_exp1_with_real_data.py  test_appraisal.py  test_day4.py
paper/: experiments.tex  methods.tex  phase1_draft.tex  phase1_final.tex  related_work.tex  results.tex
results/: exp1_metrics_20260219_2303.json  exp1_realdata_20260215_2226.json  exp1_repro.json  statistics_summary.txt
results/ablation/: ablation_progress_20260216_1721.json  ablation_results_20260216_1721.json  ablation_summary_1721.json
src/: README.md  __init__.py
src/affective_memory_networks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent/: agent.py  api_key_rotator.py  baseline.py  claude_client.py  rag.py  (+5 more)
(+12 files in other folders)
